$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.090
~~~~~~~~~~~~~~~~~

   o Fx->Scale page: the configured scale is now displayed at the right
     half of the page

   o Track duplication now also possible with COPY+PASTE in UTILITY page


MIDIboxSEQ V4.089
~~~~~~~~~~~~~~~~~

   o added DIN testmode which can be enabled from the MIOS terminal with the
     "set din_testmode on" command to display button and encoder movements.

   o added "Roll Gate" as new optional trigger layer assignment.
     It gates the Roll or Roll2 value which is configured in a parameter layer.

   o Euclid Generator: parameter layer into which the pattern will be copied
     now selectable.
     Velocity/Accent will only be changed if the first parameter layer is selected.

   o it's now possible to quickly duplicate the steps of a track:
     press&hold COPY and press the PASTE button

   o Groove page: by default, groove configuration changes are applied on all tracks now.
     It's possible to select a "local groove" by pressing GP7 button in the groove page.

   o BPM page: it's now possible to configure an output delay for each MIDI port.
     (positive and negative delays are supported - this is currently an experimental feature!)

   o fixed NoteOff in Jam Forwarding mode if FTS, Limit or Humanizer is enabled

   o NOTE: due to a RAM capacity issue, the UNDO function is currently not available
     for the LPC17 firmware


MIDIboxSEQ V4.088
~~~~~~~~~~~~~~~~~

   o improved glide function for polyphonic steps

   o BLM16x16+X support for Mute and Solo
     The new functions are available at Extra Row Button #3 and #4
     (if a BLM16x8+X is connected, they replace Start/Stop at Extra Row Button #1 and #2)

     If Mute active: the extra column buttons mute/unmute tracks
     If Solo active: the extra column buttons solo/unsolo tracks

     LED Colour coding:
     - LED off: Track neither muted nor soloed